# tibet-mux

./: .gitignore  .publish.json  LICENSE  NEXT.md  README.md  pyproject.toml
src/tibet_mux/: __init__.py  bifurcated_airlock.py  carrier_policy.py  cli.py  client.py  conformance.py  core.py  cpu_capability.py  intents.py  machine_posture.py  negotiation.py  posture_algebra.py  reattestation.py  route_posture.py  server.py  verify.py  workload_split.py
src/tibet_mux/vectors/: posture_algebra_conformance_v1.json
tests/: test_bandwidth.py  test_caint.py  test_carrier_policy.py  test_conformance.py  test_conformance_vectors.py  test_contract.py  test_core.py  test_cpu_capability.py  test_machine_posture.py  test_negotiation.py  test_posture_algebra.py  test_reattestation.py  test_route_posture.py  test_workload_split.py
