[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-mux"
version = "1.3.1"
description = "Single-port channel multiplexer with intent-based routing and TBZ signing — part of the TIBET ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "J. van de Meent", email = "jasper@humotica.com"},
    {name = "R. AI", email = "info@humotica.com"},
]
keywords = [
    "multiplexer", "channels", "intent-routing", "tibet", "provenance",
    "websocket", "tls", "ainternet", "ai-network", "single-port",
    "channel-isolation", "tbz-signing", "mux"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tibet-core>=0.5.0b2",
    "jis-core>=0.4.0b1",
]

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "websockets>=11.0"]
full = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "websockets>=11.0", "tibet-core>=0.3.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "httpx>=0.24.0", "ruff>=0.1.0"]

[project.scripts]
tibet-mux = "tibet_mux.cli:main"

[project.urls]
Homepage = "https://ainternet.org"
Repository = "https://github.com/humotica/tibet-mux"
Documentation = "https://ainternet.org/browser/#docs"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_mux"]
